# mcpstore

./: MCPStore_测试功能.ipynb  README.md  README_en.md  README_zh.md  cleanup_legacy_tool_code.py  docker-compose.yml  install.sh  migrate_tool_calls.py  platforms.toml  pyproject.toml  run_debug.sh  待优化项目rust。md  求求各位佬提点bug吧QAQ
desktop/tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src/: lib.rs  main.rs
docs/: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/docs/assets/: extra.css
docs/site/: 404.html  index.html  sitemap.xml
docs/site/api/apis/: index.html
docs/site/api/cache-config/: index.html
docs/site/api/cache-config-reference/: index.html
docs/site/api/integration/: index.html
docs/site/api/response/: index.html
docs/site/architecture/cache-architecture/: index.html
docs/site/cli/commands/: index.html
docs/site/development/: index.html
docs/site/examples/cache-config-examples/: index.html
docs/site/hub/services/: index.html
docs/site/integrations/overview/: index.html
docs/site/prompts/get-prompt/: index.html
docs/site/prompts/list-prompts/: index.html
docs/site/quickstart/: index.html
docs/site/resources/list-resources/: index.html
docs/site/resources/read-resource/: index.html
docs/site/search/: search_index.json
docs/site/services/add-service/: index.html
docs/site/services/check-health/: index.html
docs/site/services/delete-service/: index.html
docs/site/services/list-services/: index.html
docs/site/services/overview/: index.html
docs/site/services/patch-service/: index.html
docs/site/services/restart-service/: index.html
docs/site/services/service-proxy/: index.html
docs/site/services/show-config/: index.html
docs/site/services/update-service/: index.html
docs/site/session/sessions/: index.html
docs/site/store/get-info/: index.html
docs/site/store/overview/: index.html
docs/site/testing/: index.html
docs/site/tools/call-tool/: index.html
docs/site/tools/find-tool/: index.html
docs/site/tools/list-tools/: index.html
docs/site/tools/overview/: index.html
docs/site/tools/tool-info/: index.html
docs/site/tools/tool-proxy/: index.html
docs/site/tools/tool-tags/: index.html
docs/site/troubleshooting/: index.html
python/: README.md  pyproject.toml
python/example_local/for_agent/isolation/: 14_multi_agent_isolation.py
python/src/mcpstore/: __init__.py  _rust_cli.py  mcp.py
python/src/mcpstore/adapters/: __init__.py  autogen_adapter.py  common.py  crewai_adapter.py  langchain_adapter.py  langgraph_adapter.py  llamaindex_adapter.py  openai_adapter.py  semantic_kernel_adapter.py
python/src/mcpstore/api/: __init__.py  api_decorators.py  api_dependencies.py  api_exceptions.py  api_pack.py
python/src/mcpstore/cli/: __init__.py  main.py
python/src/mcpstore/config/: __init__.py  cache_config.py  config.py  factory.py  health_check.py  namespace.py  path_utils.py  redis_errors.py
python/src/mcpstore/core/: models.py
python/src/mcpstore/core/bridge/: __init__.py  async_orchestrated_bridge.py
python/src/mcpstore/core/context/: __init__.py  advanced_features.py  agent_proxy.py  agent_service_mapper.py  agent_statistics.py  async_safe_service_management.py  base_context.py  cache_proxy.py  resources_prompts.py  service_management.py  service_operations.py  service_proxy.py  session.py  session_management.py  store_proxy.py  tool_operations.py  tool_proxy.py  tool_proxy_annotations.py  tool_transformation.py  types.py
python/src/mcpstore/core/store/: __init__.py  client_manager.py  config_management.py  rust_backend.py  setup_manager.py
python/src/mcpstore/runner/: __init__.py  main.py
python/tests/: test_pyo3_native_bridge.py  test_readme_api_contract.py  test_scope_binding_integration.py  test_scope_contract.py
python/tools/: run_example_local_contract.py
rust/: Cargo.toml  README.md
rust/apps/cli/: Cargo.toml
rust/apps/cli/src/: lib.rs  store_args.rs  tui.rs
rust/apps/cli/src/commands/: api.rs  config.rs  mcp.rs  mcp_server.rs  ui_web.rs
rust/apps/cli/src/daemon/: client.rs  server.rs
rust/apps/cli/tests/: api_flow.rs
rust/apps/cli/tests/fixtures/: mock_mcp_server.py
rust/apps/mcpstore/: Cargo.toml  build.rs
rust/apps/mcpstore/src/: bootstrap.rs  cli_app.rs  main.rs  store_args.rs  tui.rs
rust/apps/mcpstore/src/commands/: api.rs  auth.rs  config.rs  daemon_cmd.rs  elicitation.rs  mcp.rs  mcp_server.rs  mod.rs  protocol.rs  task.rs  ui_web.rs  web.rs  web_assets.rs
rust/apps/mcpstore/src/daemon/: client.rs  protocol.rs  server.rs
rust/apps/mcpstore/src/tui/: app.rs  events.rs  i18n.rs  layout.rs  mod.rs  theme.rs  ui.rs
rust/apps/mcpstore/tests/: api_flow.rs  auth_cli_contract.rs  call_execution_cli_contract.rs  cli_real_flow.rs  mcp_server_flow.rs  protocol_cli_contract.rs  task_cli_contract.rs
rust/apps/mcpstore/tests/fixtures/: execution_mcp_server.py  mock_mcp_server.py
rust/bindings/python/: Cargo.toml
rust/bindings/python/src/: core_store.rs  lib.rs  mcp_server_runner.rs  perspective.rs  py_value.rs
rust/crates/cache/: Cargo.toml
rust/crates/cache/src/: openkeyv_adapter.rs
rust/crates/config/: Cargo.toml
rust/crates/config/src/: resolver.rs  validator.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: lib.rs  perspective.rs  store.rs
rust/crates/core/src/store/: db_refresh.rs
rust/crates/events/: Cargo.toml
rust/crates/mcpstore/: Cargo.toml
rust/crates/mcpstore/src/: client_config.rs  config_formats.rs  diagnostics.rs  identity.rs  lib.rs  mcp_server.rs  openapi.rs  openapi_runtime.rs  tool_transform.rs
rust/crates/mcpstore/src/agent/: bindings.rs  catalog.rs  content.rs  health.rs  mod.rs  models.rs  prompts.rs  resources.rs  scope.rs  services.rs  tool_preferences.rs  tool_visibility.rs  tools.rs  view.rs
rust/crates/mcpstore/src/auth/: config.rs  coordinator.rs  credentials.rs  key.rs  keyring.rs  lifecycle.rs  mod.rs  (+4 more)
rust/crates/registry/: Cargo.toml
rust/crates/registry/src/: lib.rs  scope.rs  service.rs  tool.rs
rust/crates/transport/: Cargo.toml
rust/crates/transport/src/: client.rs
(+1185 files in other folders)
