[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpstore"
version = "1.5.17"
description = "A composable, ready-to-use MCP toolkit for agents and rapid integration."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv>=1.1.0",
    "exceptiongroup>=1.2.2",
    "httpx>=0.28.1",
    "mcp>=1.24.0,<2.0",
    "openapi-pydantic>=0.5.1",
    "platformdirs>=4.0.0",
    "pydocket>=0.16.3",
    "rich>=13.9.4",
    "cyclopts>=4.0.0",
    "authlib>=1.6.5",
    "pydantic[email]>=2.11.7",
    "pyperclip>=1.9.0",
    "packaging>=23.0",
    "py-key-value-aio[disk,keyring,memory]>=0.3.0,<0.4.0",
    "uvicorn>=0.35",
    "websockets>=15.0.1",
    "jsonschema-path>=0.3.4",
    "jsonref>=1.1.0",
    "toml>=0.10.2",
    "langchain>=1.2.7",
    "watchdog>=6.0.0",
]

authors = [
    {name = "ooooofish", email = "ooooofish@126.com"}
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/whillhill/mcpstore"
"Bug Tracker" = "https://github.com/whillhill/mcpstore/issues"

[project.scripts]
mcpstore = "mcpstore.cli.main:main"


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "*test*", "web*", "mcpservice*"]


[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
