[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.21",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.21",
]
