[package]
name = "mcpstore-tauri"
version = "1.5.18"
edition = "2021"
publish = false

[lib]
name = "mcpstore_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mcpstore-tauri"
path = "src/main.rs"

[dependencies]
mcpstore-cli = { path = "../../rust/apps/mcpstore" }
anyhow = "1.0"
axum = "0.7"
dirs = "6.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
