[package]
name = "mcpstore-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "MCPStore CLI - command line interface for MCP service management"
default-run = "mcpstore"

[[bin]]
name = "mcpstore"
path = "src/main.rs"

[[bin]]
name = "mcpstore-tui"
path = "src/bin/mcpstore-tui.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
tabled = { workspace = true }

axum = "0.7"
maud = { version = "0.27", features = ["axum"] }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["crossterm"] }

mcpstore = { path = "../../crates/mcpstore" }
chrono = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
