[package]
name = "mcpstore"
version = "1.5.18"
edition = "2021"
rust-version = "1.78"
authors = ["ooooofish <ooooofish@126.com>"]
license = "MIT"
repository = "https://github.com/ip2a/mcpstore"
description = "MCPStore - unified MCP service management library"
keywords = ["mcp", "ai", "tools", "registry", "cache"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "macros", "time", "process", "io-util", "signal", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = { workspace = true }
toml = "0.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# MCP protocol
rmcp = { version = "1.5", features = ["client", "server", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "reqwest"] }

# Cache backends
openkeyv = { version = "0.1.4", default-features = false, features = ["redis"] }
redis = { workspace = true }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
