[package]
name = "mcpstore"
version = "1.5.18"
edition = "2021"
rust-version = "1.78"
authors = ["ooooofish <ooooofish@126.com>"]
license = "MIT"
repository = "https://github.com/ip2a/mcpstore"
description = "MCPStore - unified MCP service management library"
keywords = ["mcp", "ai", "tools", "registry", "cache"]
categories = ["api-bindings", "development-tools"]

[dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "macros", "time", "process", "io-util", "signal", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = { workspace = true }
toml = "0.8"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
uuid = { version = "1.10", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# MCP protocol
rmcp = { workspace = true }

# Cache backends
openkeyv = { version = "0.1.4", default-features = false, features = ["redis"] }
redis = { workspace = true }
# HTTP / web (only needed for the optional MCP server runner)
axum = { version = "0.7", optional = true }
http = "1"
iri-string = "0.7.12"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "multipart", "rustls"] }
futures = "0.3"
sse-stream = "0.2.4"
base64 = "0.22"
regex = "1.11"
email_address = { version = "0.2.9", default-features = false }
blake3 = "1"
keyring = { version = "=3.6.3", default-features = false, features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust", "vendored"] }
zeroize = { version = "1", features = ["derive"] }
jsonwebtoken = { version = "10.4", features = ["rust_crypto"] }

[features]
default = ["mcp-server"]
mcp-server = ["dep:axum", "rmcp/transport-streamable-http-server"]

[dev-dependencies]
tokio-test = "0.4"
