[package]
name = "mcpstore_registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "MCPStore service registry - hot path for service/tool/agent lookups"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Depends on cache layer for storage
mcpstore_cache = { path = "../cache" }

[dev-dependencies]
tokio-test = "0.4"
